<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <Button
            android:id="@+id/plugin_test_btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_world1" />

        <Button
            android:id="@+id/plugin_test_btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_world2" />

        <Button
            android:id="@+id/plugin_test_btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_world3" />

        <Button
            android:id="@+id/plugin_test_btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_world4" />

        <com.rick.tws.share.widget.ShareLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_btn_normal_color" />

        <!-- 测试来自宿主的自定义控件的自定义属性 -->

        <com.example.plugindemo.view.PluginTestCustomAttrView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_btn_normal_color"
            app:custarr_text="属性字符串"
            app:custarr_text_color="@color/light_btn_normal_color"
            app:custarr_text_color_size="8sp" />
    </LinearLayout>

</ScrollView>